xmobar/xmobar-dual.errors

xmobar-dual.hs:86:35: error:
    lexical error in string/character literal at character '\61600'
   |
86 |         Run  DiskIO [("/", "<fn=2></fn>:<read> <write>"),  ("/home", "<fn=2></fn>:<read> <write>")] [] 10,
   |                                   ^
